--- a/trunk/trunk/Implementación/CBRClient/res/help/html/MainFrame.html
+++ b/trunk/trunk/Implementación/CBRClient/res/help/html/MainFrame.html
@@ -6,8 +6,8 @@
 	<h1>Acciones en la ventana principal</h1>
 	<p>Esta ventana explica las principales funciones de la aplicación
 	 de forma general. Puede consultarse el apartado correspondiente a cada
-	 operación para una explicación más detallada.
-	<h2>Acciones de administrador</h3><br/><br/>
+	 operación para una explicación más detallada.</p>
+	<h2>Acciones de administrador</h2><br/><br/>
 	<img src="img/mainframe.jpg"/>
 	<h3>Gestionar Tipos de caso</h3>
 	<p>Un tipo de caso es un conjunto Problema-Solución del que se almacenarán
