--- a/trunk/trunk/Implementación/CBRClient/res/help/html_en/InsertarCasoFrame.html
+++ b/trunk/trunk/Implementación/CBRClient/res/help/html_en/InsertarCasoFrame.html
@@ -12,26 +12,21 @@
 	<p>You can import WEKA files in *.arff format (Check <A HREF="http://www.cs.waikato.ac.nz/ml/weka/arff.html"> this link </A>
 	to see those files' format).
 	 The file should contain a column for each field of the case type that is being imported, whose name and data type match the Case Type
-	 specification. 
-
-	 
-	 . Asimismo, debe haber un atributo de nombre META_QUALITY 
-	 y tipo NUMERIC, que indica la medida de calidad del caso de 0 a 100. Con todo, un fichero *.arff válido debería tener el siguiente aspecto:<br/><br/>
+	 specification. There must also exist an attribute named META_QUALITY of NUMERIC type, which indicates the quality level of the
+	 case from 0 to 100. To sum up, a valid *.arff file should have the following appearance:<br/><br/>
 	<img src="img/arff.png"/><br/><br/>
-	 Para cargar el fichero, desde el panel de importar desde fichero, Pulse el botón "Abrir" y, con el fichero seleccionado 
-	 (Su ruta aparecerá en el cuadro de texto a su izquierda) pulse "Cargar desde Fichero".<br/><br/>
+	 To load the file, from the import from file panel, click on the "Open" button and once a file has been selected (Its path will appear
+	 on the text area to the left), click "Load from file".<br/><br/>
 	 <img src="img/cargarfichero.png"/><br/>
-	 Verá como los casos aparecen en la tabla inferior. Los atributos del problema aparecen en rojo,
-	 los de la solución en azul y la calidad en verde.<br/>
-	 Ahora, puede modificar, ordenar (pulsando la cabecera de cada columna) o buscar en la tabla
-	 (con el filtro que se muestra a continuación). Cuando haya terminado, puede pulsar el botón "Insertar casos" para completar la operación.<br/>
-	 <br/>
+	 You'll see how the cases appear in the table below. The problem attributes appear in red, the solution attributes in blue and the quality in green.<br/>
+	 Now you can modify, order (clicking on each column's header) or search in the table (with the filter shown below). Once you're done, you can
+	 click on the "Insert cases" button to complete the operation.<br/><br/>
 	  <img src="img/filtrar.png"/><br/>
-	  Recuerde que el filtro acepta expresiones regulares básicas, según la convención corriente.
+	  Remember the filter accepts basic regular expressions, following the common convention.
 	</p>
 
-	<h2>Importación a mano</h2>
-	</p>También se permite introducir manualmente un caso desde el panel inferior de Inserción manual. 
-	 Simplemente rellénese el formulario y pulse el botón "Inserción Manual". Recuerde que la calidad es un atributo de 0 a 100.<p>
+	<h2>Manual import</h2>
+	</p>You can also introduce a new case from the manual import panel located at the lowermost of the window.
+	 Simply fill up the form and push the "Manual Insert" button. Remember that the quality is an attribute from 0 to 100.<p>
 </body>
 </html>
