--- a/trunk/trunk/Implementación/CBRClient/res/help/html_en/IntroducirConsultaCBRFrame.html
+++ b/trunk/trunk/Implementación/CBRClient/res/help/html_en/IntroducirConsultaCBRFrame.html
@@ -1,33 +1,32 @@
 ﻿<html>
 <head>
-	<title>Introducir una consulta</title>
+	<title>Performing a query</title>
 </head>
 <body>
-	<h1>Introducir una consulta CBR</h1>
-	<h2>Consultas configuradas y básicas</h2>
-	<p>Los <b>usuarios básicos</b> únicamente pueden realizar consultas básicas. En este tipo de consultas
-	 únicamente se permite introducir los datos del problema para obtener una solución. Los <b>usuarios avanzados</b> pueden realizar
-	 consultas configuradas. En ellas se puede introducir, ademas de los datos del problema, de qué forma (métrica) y con que peso (grado de importancia)
-	 se considerará cada atributo, así como la técnica que se empleará en cada paso del ciclo CBR.</p>
-	<h2>Introducir una consulta básica</h2>
+	<h1>Performing a CBR query</h1>
+	<h2>Basic and configurated queries</h2>
+	<p><b>Basic users</b> can only perform basic queries. This kind of queries allow only to insert the problem data to obtain a solution. 
+	<b>advanced users</b> can perform configured queries. In them you can introduce, besides the problem data, the way (metric) and weight
+	(degree of relevance) each attribute will be configured, as well as the technique that will be used in each step of the CBR cycle.</p>
+	<h2>Performing a basic CBR query</h2>
 	 <img src="img/consultabasica.jpg"/><br/>
-	<p>Para realizar una consulta básica, simplemente introduzca los datos del problema.
-	 Al lado del nombre de cada atributo aparece el tipo de datos al que pertenece.
-	 Si intenta introducir un valor que no se corresponde al tipo se le informará de esto. Para realizar la consulta, pulse el botón 
-	 <b>Ejecutar Ciclo</b> si desea ejecutar el ciclo completo de una vez o el botón <b>Paso a paso</b> si quiere ver los resultados intermedios
-	 de cada etapa del ciclo.</p>
-	 <h2>Introducir una consulta configurada</h2>
+	<p>To perform a basic query, simply introduce the problem's data.
+	 To the side of each attribute the data type to which it belongs is shown.
+	 If you try to introduce a value not allowed by the type you will be notified of it. To perform a query, click the <b>Execute Cycle</b>
+	 button if you wish to execute the complete cycle once or the <b>Step by step</b> if you want to see the intermediate results of each
+	 step in the cycle.</p>
+	 <h2>Perfoming a configured CBR query</h2>
 	  <img src="img/consultaconfigurada.jpg"/><br/>
-	 <h3>Configurar los datos del problema<h3>
-	 <p>En una consulta configurada le aparecerá al lado de cada atributo su peso (Importancia relativa respecto al resto de atributos) y su
-	  métrica (Forma en que se comparará el atributo). Estos pueden ser modificados por el usuario alterando los valores del campo de texto
-	  y el desplegable correspondientes.
+	 <h3>Configuring the problem data<h3>
+	 <p>In a configured query, near each of the attributes will appear its weight (Relative importance against the other attributes) and
+	 its metric (Way in which the attribute will be compared). These can be modified by the user altering the values of the respective textfield and
+	 dropdown list.
 	 </p>
-	 <h3>Configurar las técnicas<h3>
-	 <p>Se le permite escoger qué técnica empleará en cada etapa del ciclo CBR entre varias (determinadas por su administrador).
-	  Para escoger emplear una técnica en concreto, selecciónela en su desplegable correspondiente. Si desea una técnica no disponible para este problema,
-	  contacte con su administrador para que la habilite.</p>
-	  <p>Una vez escogida su técnica, configúrela pulsando el botón "Configurar". Para más información sobre cada técnica concreta y cómo configurarla,
-	   consulte la página correspondiente a ella en esta ayuda.</p>
+	 <h3>Configuring methods<h3>
+	 <p>You are allowed to choose which method will be used in each CBR cycle step between many(determined by the administrator).
+	 To choose utilizing a concrete method, select it in its corresponding dropdown list. If you want a method that is not available for this
+	 problem, contact your administrator to have it enabled.</p>
+	<p>Once the method's been chosen, configure it clicking on the "Configure" button. For more info about each concrete method and how to configure it,
+	 browse the corresponding page in this manual.</p>
 </body>
 </html>
