--- a/trunk/trunk/Implementación/CBRClient/res/help/html_en/MainFrame.html
+++ b/trunk/trunk/Implementación/CBRClient/res/help/html_en/MainFrame.html
@@ -1,14 +1,16 @@
 ﻿<html>
 <head>
-	<title>Acciones en la ventana principal</title>
+	<title>Actions on the main window</title>
 </head>
 <body>
-	<h1>Acciones en la ventana principal</h1>
-	<p>Esta ventana explica las principales funciones de la aplicación
-	 de forma general. Puede consultarse el apartado correspondiente a cada
-	 operación para una explicación más detallada.
-	<h2>Acciones de administrador</h3><br/><br/>
+	<h1>Main window actions</h1>
+	<p>This window explains the application's main features in a general sense.
+	You can browse each operation's corresponding page for a more detailed explanation.
+	<h2>Administrator actions</h2><br/><br/>
 	<img src="img/mainframe.jpg"/>
+	
+	
+	
 	<h3>Gestionar Tipos de caso</h3>
 	<p>Un tipo de caso es un conjunto Problema-Solución del que se almacenarán
      casos concretos. El botón de Gestionar Tipos permite definir, modificar 
